# python-project-lvl1

./: Makefile  README.md  pyproject.toml
.github/workflows/: main.yml
brain_games/scripts/: brain_games.py
