[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Lobanov Aleksey <lobanov.aw@gmail.com>"]
packages = [
  { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.9"
prompt = "^0.4.1"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"

[tool.poetry.dev-dependencies]
jedi = "^0.18.0"
flake8 = "^3.9.2"
autopep8 = "^1.5.7"
black = "^21.7b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
